syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
    //   Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }

    rpc SayMultiHello (stream HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    bool error = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
    int32 serverId = 2;
}
